Segfault with hair particles cache and vgroups #40733

Closed
opened 2014-06-20 22:17:20 +02:00 by Daniel Salazar · 10 comments
Member

System Information

openSUSE 12.3 64bits
NVIDIA 480GTX SC
AMD FX-8350

Blender Version

Broken: 9b83ceb

Short description of error

Crash using baked hair particles + vgroup control

Exact steps for others to reproduce the error

Open PROBLEMA8.blend
Press F12

If I remove the vgroups from the particle length and density the crasher is gone
If I click on Free Edit the crasher is gone too

**System Information** openSUSE 12.3 64bits NVIDIA 480GTX SC AMD FX-8350 **Blender Version** Broken: 9b83ceb **Short description of error** Crash using baked hair particles + vgroup control **Exact steps for others to reproduce the error** Open [PROBLEMA8.blend](https://archive.blender.org/developer/F95034/PROBLEMA8.blend) Press F12 If I remove the vgroups from the particle length and density the crasher is gone If I click on Free Edit the crasher is gone too
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Added subscriber: @BoscoMattel

Added subscriber: @BoscoMattel
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

It looks like this is yet again an issue with the ParticleData.num fields exceeding the actual mesh data range. Here it might be caused by the psys_render_set function being called to generate hair particles for the cycles render:
https://developer.blender.org/diffusion/B/browse/master/intern/cycles/blender/blender_curves.cpp;4236e3bebf693912102f79102c1ae5389b7536c5$326

It looks like this is yet again an issue with the ParticleData.num fields exceeding the actual mesh data range. Here it might be caused by the `psys_render_set` function being called to generate hair particles for the cycles render: https://developer.blender.org/diffusion/B/browse/master/intern/cycles/blender/blender_curves.cpp;4236e3bebf693912102f79102c1ae5389b7536c5$326
Member

Somehow the data in the file seems corrupted: the values in particle 79 and following is way above the numTessFaces limit. Can't say where this originated from or why it causes crash only with length vgroups (density vgroup only works fine).

Somehow the data in the file seems corrupted: the values in particle 79 and following is way above the numTessFaces limit. Can't say where this originated from or why it causes crash only with length vgroups (density vgroup only works fine).

This issue was referenced by d8b0470fd0

This issue was referenced by d8b0470fd0f794e7ce6bca14a075fd193cca9d8a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit d8b0470fd0.

Closed by commit d8b0470fd0.
Member

Note that the "fix" is just a sanity check to avoid the crash. Investigating this takes to much time and doesn't yield results, the issues with this mesh mapping system pop up again and again ...

Note that the "fix" is just a sanity check to avoid the crash. Investigating this takes to much time and doesn't yield results, the issues with this mesh mapping system pop up again and again ...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40733
No description provided.