Fix T40733: Segfault with hair particles cache and vgroups.

The "fix" is just a stupid index sanity check to avoid crashing. Underlying issue is not identified and probably never will ...